--- a/notebooks/pareto_front.ipynb
+++ b/notebooks/pareto_front.ipynb
@@ -54,10 +54,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "README.md                \u001b[31mX_full_random.csv\u001b[m\u001b[m        \u001b[31mb1-b21_random_virial.csv\u001b[m\u001b[m\r\n",
-      "\u001b[31mX_frac_block.csv\u001b[m\u001b[m         \u001b[31mb0_random_deltaG.csv\u001b[m\u001b[m     \u001b[34mfigures\u001b[m\u001b[m\r\n",
-      "\u001b[31mX_frac_random.csv\u001b[m\u001b[m        \u001b[31mb0_random_virial.csv\u001b[m\u001b[m     \u001b[34mnotebooks\u001b[m\u001b[m\r\n",
-      "\u001b[31mX_full_block.csv\u001b[m\u001b[m         \u001b[31mb1-b21_random_deltaG.csv\u001b[m\u001b[m\r\n"
+      "README.md                \u001b[31mX_full_random.csv\u001b[m\u001b[m        \u001b[31mb1-b21_random_virial.csv\u001b[m\u001b[m\n",
+      "\u001b[31mX_frac_block.csv\u001b[m\u001b[m         \u001b[31mb0_random_deltaG.csv\u001b[m\u001b[m     \u001b[34mfigures\u001b[m\u001b[m\n",
+      "\u001b[31mX_frac_random.csv\u001b[m\u001b[m        \u001b[31mb0_random_virial.csv\u001b[m\u001b[m     \u001b[34mnotebooks\u001b[m\u001b[m\n",
+      "\u001b[31mX_full_block.csv\u001b[m\u001b[m         \u001b[31mb1-b21_random_deltaG.csv\u001b[m\u001b[m\n"
      ]
     }
    ],
@@ -264,9 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -377,9 +375,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
