feat: implemented basic pal
Former-commit-id: 10b398374c9441766f96a64c7ad59cb4a3ed6281 [formerly 77f4281570325b9ffd46481a2ba1aa894b124180]
Former-commit-id: d264e56bea43147cf0c20b97ab6ee6a747bdd15d

--- a/notebooks/play_w_pal.ipynb
+++ b/notebooks/play_w_pal.ipynb
@@ -217,6 +217,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _sample(rectangle_lows, rectangle_ups, pareto_optimal_t, non_pareto_optimal_t, unclassified_t, sampled, x_input, x_train):\n",
+    "    maxwt = 0\n",
+    "    maxid = -1\n",
+    "    \n",
+    "    for i in range(0,len(x_input)):\n",
+    "        # Among the points x ∈ Pt ∪ Ut, the one with the largest wt(x) is chosen as the next sample xt to be evaluated.\n",
+    "        # Intuitively, this rule biases the sampling towards exploring, and thus improving the model for, the points most likely to be Pareto-optimal.\n",
+    "        if ((unclassified_t[x] == 1) or (pareto_optimal_t[x] == 1)) and not(sampled[x] == 1):\n",
+    "            # weight is the length of the diagonal of the uncertainity region\n",
+    "            wt = np.linalg.norm(rectangle_ups[i,:] - rectangle_lows[i,:])\n",
+    "            if maxid == -1:\n",
+    "                maxwt = wt\n",
+    "                maxid = x\n",
+    "            # the point with the largest weight is chosen as the next sample\n",
+    "            elif wt > maxwt:\n",
+    "                maxwt = wt\n",
+    "                maxid = x\n",
+    "                \n",
+    "    x_train = np.insert(x_train, x_train.shape[0], x_input[maxid], axis = 0)\n",
+    "    sampled[maxid] = 1\n",
+    "    \n",
+    "    return x_train, sampledle\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -231,6 +261,7 @@
     "    \n",
     "    iteration = 0\n",
     "    \n",
+    "    # stop when all points are classified \n",
     "    while (np.sum(unclassified_0) > 0) and (iteration <= iterations):\n",
     "        # STEP 1: modeling (train and predict using GPR, one GP per target)\n",
     "        mus, stds = _get_gp_predictions(gps, x_train, y_train, x_input)\n",
@@ -253,11 +284,16 @@
     "            \n",
     "        # pareto classification, to be factored out\n",
     "        # update lists \n",
-    "        pareto_optimal_t, not_pareto_optimal_t, unclassified_t = _pareto_classify()\n",
-    "        \n",
-    "        \n",
+    "        pareto_optimal_t, not_pareto_optimal_t, unclassified_t = _pareto_classify(pareto_optimal_0, \n",
+    "                                                                                  not_pareto_optimal_0, \n",
+    "                                                                                  unclassified_0, \n",
+    "                                                                                  rectangle_lows, \n",
+    "                                                                                  rectangle_ups, x_input, epsilon)\n",
+    "\n",
     "        \n",
     "        # sampling from x_input \n",
+    "        x_train, sampled = _sample(rectangle_lows, rectangle_ups, pareto_optimal_t, non_pareto_optimal_t, unclassified_t, sampled, x_input, x_train)\n",
+    "        pareto_optimal_0, not_pareto_optimal_0, unclassified_0 = pareto_optimal_t, not_pareto_optimal_t, unclassified_t\n",
     "        \n",
     "        \n",
     "    return pareto_optimal_t"
