chore: fixing delta/epsilon
Former-commit-id: ac46cc9b6930885778e195ac7b52d85252f6230a [formerly 5d28b70a1036b8cb94062e74f123344d9b261d1b]
Former-commit-id: 22e6aed1e75f56d209f1198322667a447796ad7b

--- a/notebooks/play_w_pal.ipynb
+++ b/notebooks/play_w_pal.ipynb
@@ -123,8 +123,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def _get_uncertainity_region(mu: float, std: float, beta_sqrt: float, epsilon: float=0.001): \n",
-    "    low_lim, high_lim = mu - epsilon * beta_sqrt * std, mu + epsilon * beta_sqrt * std\n",
+    "def _get_uncertainity_region(mu: float, std: float, beta_sqrt: float): \n",
+    "    low_lim, high_lim = mu -  beta_sqrt * std, mu +   beta_sqrt * std\n",
     "    return low_lim, high_lim "
    ]
   },
@@ -134,10 +134,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def _get_uncertainity_regions(mus: np.array, stds: np.array, beta_sqrt: float, epsilon: float=0.001): \n",
+    "def _get_uncertainity_regions(mus: np.array, stds: np.array, beta_sqrt: float): \n",
     "    low_lims, high_lims = [], []\n",
     "    for i in range(0, mus.shape[1]):\n",
-    "        low_lim, high_lim = _get_uncertainity_region(mus[:,i], stds[:,i], beta_sqrt, epsilon)\n",
+    "        low_lim, high_lim = _get_uncertainity_region(mus[:,i], stds[:,i], beta_sqrt)\n",
     "        low_lims.append(low_lim)\n",
     "        high_lims.append(high_lim)\n",
     "        \n",
@@ -251,7 +251,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pal(gps: list, x_train: np.array, y_train: np.array, x_input: np.array, y_input: np.array, epsilon: float = 0.001, iterations: int = 100):\n",
+    "def pal(gps: list, x_train: np.array, y_train: np.array, x_input: np.array, y_input: np.array, delta: float = 0.05, epsilon: float = 0.001, iterations: int = 100):\n",
     "    # x_input is the E set in the PAL paper \n",
     "    # in the beginning, nothing is selected = everything is unclassified\n",
     "    pareto_optimal_0 = [0] * len(x_input)\n",
@@ -267,13 +267,16 @@
     "        mus, stds = _get_gp_predictions(gps, x_train, y_train, x_input)\n",
     "    \n",
     "        # ToDo: check how beta is computed the heuristics depend on the kernel \n",
-    "        beta = 2 * np.log(3.0 * len(x) * ((np.pi * iteration) ** 2) / 0.0006)\n",
+    "        # which is achieved by choosing βt = 2 log(n|E|π2t2/(6δ)).\n",
+    "        # n: number of objectives (y_input.shape[1])\n",
+    "        \n",
+    "        beta = 2 * np.log(y_input.shape[1] * len(x) * np.square(np.pi) * np.square(iteration) / (6 * delta))\n",
     "            \n",
     "        # if point is sampled we know the mu and have no epistemic uncertainity    \n",
     "        mus, stds = _update_sampled(mus, stds, sampled, y_input)\n",
     "        \n",
     "        # get the uncertainity rectangles, sqrt only once here for efficiency\n",
-    "        lows, ups = _get_uncertainity_regions(mus, stds, np.sqrt(beta), epsilon)\n",
+    "        lows, ups = _get_uncertainity_regions(mus, stds, np.sqrt(beta))\n",
     "        \n",
     "        if iteration == 1: \n",
     "            # initialization\n",
