chore: adding some comments
Former-commit-id: 6ef8312f86304053fc78613e070405a3f186700e [formerly cf6783999aa289156bd30a8550514ca1f335d819]
Former-commit-id: a6b3ad2b2c70a051143daa5d1ab654f6b6161681

--- a/notebooks/play_w_pal.ipynb
+++ b/notebooks/play_w_pal.ipynb
@@ -198,13 +198,17 @@
     "            pareto = True\n",
     "            nonpareto = False\n",
     "            \n",
-    "            # loop over targets (maybe better with any/all?)\n",
-    "\n",
+    "            # At iteration t, the points in Pt−1 and Nt−1 keep their classification. The only points x to be reclassified are those in Ut−1 , done as follows\n",
+    "            \n",
+    "            # If the pessimistic outcome min(Rt(x)) of x is not dominated by the optimistic outcome max(Rt(x )) of any other point (up to a shift of ε by both),\n",
     "            if all(rectangle_lows[i] * (1 + epsilon) <= rectangle_ups[i] * (1 - epsilon)):\n",
     "                pareto = False\n",
+    "                \n",
+    "            # If the optimistic outcome max(Rt(x)) of x is dominated by the pessimistic outcome min(Rt(x′)) of any x′ (up to a shift of ε by both),    \n",
     "            if all(rectangle_ups[i] * (1 - epsilon) <= rectangle_lows[i] * (1 + epsilon)): \n",
     "                nonpareto = True\n",
-    "                \n",
+    "            \n",
+    "            # All other points remain unclassified.\n",
     "            if pareto:\n",
     "                pareto_optimal_t[x] = 1\n",
     "                unclassified_t[x] = 0\n",
