chore: starting to add some logging
Former-commit-id: 5c86c303df635eaa441ad08ed89d5cf80c53b5ae [formerly 38ae822f6e0ec2b4e5753649e55ead00e24feefc]
Former-commit-id: 0e5add3f2c2f4df963e9e73607510ed8c79099e8

--- a/notebooks/play_w_pal.ipynb
+++ b/notebooks/play_w_pal.ipynb
@@ -81,7 +81,8 @@
    "outputs": [],
    "source": [
     "import pygmo as pg \n",
-    "from typing import Union"
+    "from typing import Union\n",
+    "import logging"
    ]
   },
   {
@@ -225,7 +226,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def _sample(rectangle_lows, rectangle_ups, pareto_optimal_t, non_pareto_optimal_t, unclassified_t, sampled, x_input, x_train):\n",
+    "def _sample(rectangle_lows, rectangle_ups, pareto_optimal_t, non_pareto_optimal_t, unclassified_t, sampled, x_input, x_train, y_train):\n",
     "    maxwt = 0\n",
     "    maxid = -1\n",
     "    \n",
@@ -244,7 +245,10 @@
     "                maxid = x\n",
     "                \n",
     "    x_train = np.insert(x_train, x_train.shape[0], x_input[maxid], axis = 0)\n",
+    "    y_train = np.insert(y_train, y_train.shape[0], x_input[maxid], axis = 0)\n",
+    "    \n",
     "    sampled[maxid] = 1\n",
+    "    \n",
     "    \n",
     "    return x_train, sampledle\n"
    ]
@@ -257,6 +261,8 @@
    "source": [
     "def pal(gps: list, x_train: np.array, y_train: np.array, x_input: np.array, y_input: np.array, delta: float = 0.05, epsilon: float = 0.001, iterations: int = 100):\n",
     "    # x_input is the E set in the PAL paper \n",
+    "   \n",
+    "    # initalize binary list to keep track of the different sets\n",
     "    # in the beginning, nothing is selected = everything is unclassified\n",
     "    pareto_optimal_0 = [0] * len(x_input)\n",
     "    not_pareto_optimal_0 = [0] * len(x_input)\n",
@@ -265,17 +271,35 @@
     "    \n",
     "    iteration = 0\n",
     "    \n",
+    "    logger = logging.getLogger()\n",
+    "    handler = logging.StreamHandler()\n",
+    "    formatter = logging.Formatter(\n",
+    "            '%(asctime)s %(name)-12s %(levelname)-8s %(message)s')\n",
+    "    handler.setFormatter(formatter)\n",
+    "    logger.addHandler(handler)\n",
+    "    logger.setLevel(logging.DEBUG)\n",
+    "    \n",
+    "    \n",
+    "    logger.info(\"Starting now the PAL loop\")\n",
+    "    logger.debug(\"Will use the following settings\")\n",
+    "    logger.debug(\"epsilon: {}, delta: {}, iterations: {}\".format(epsilon, delta, iterations))\n",
+    "    logger.debug(\"x_train shape: {}, y_train shape: {}\".format(x_train.shape, y_train.shape))\n",
+    "\n",
     "    # stop when all points are classified \n",
     "    while (np.sum(unclassified_0) > 0) and (iteration <= iterations):\n",
+    "        iteration += 1\n",
+    "        logger.debug(\"Starting iteration {}\".format(iteration))\n",
+    "        \n",
     "        # STEP 1: modeling (train and predict using GPR, one GP per target)\n",
+    "        logger.debug(\"Starting modeling step, fitting the GPs\")\n",
     "        mus, stds = _get_gp_predictions(gps, x_train, y_train, x_input)\n",
     "    \n",
-    "        # ToDo: check how beta is computed the heuristics depend on the kernel \n",
+    "        # update scaling parameter β\n",
     "        # which is achieved by choosing βt = 2 log(n|E|π2t2/(6δ)).\n",
     "        # n: number of objectives (y_input.shape[1])\n",
-    "        \n",
     "        beta = 2 * np.log(y_input.shape[1] * len(x) * np.square(np.pi) * np.square(iteration) / (6 * delta))\n",
-    "            \n",
+    "        logger.debug(\"Scaling parameter beta at the current iteration is {}\".format(beta))\n",
+    "        \n",
     "        # if point is sampled we know the mu and have no epistemic uncertainity    \n",
     "        mus, stds = _update_sampled(mus, stds, sampled, y_input)\n",
     "        \n",
@@ -289,7 +313,7 @@
     "            rectangle_lows, rectangle_ups = _union(rectangle_lows, rectangle_ups, lows, ups)\n",
     "            \n",
     "            \n",
-    "        # pareto classification, to be factored out\n",
+    "        # pareto classification\n",
     "        # update lists \n",
     "        pareto_optimal_t, not_pareto_optimal_t, unclassified_t = _pareto_classify(pareto_optimal_0, \n",
     "                                                                                  not_pareto_optimal_0, \n",
@@ -302,6 +326,7 @@
     "        x_train, sampled = _sample(rectangle_lows, rectangle_ups, pareto_optimal_t, non_pareto_optimal_t, unclassified_t, sampled, x_input, x_train)\n",
     "        pareto_optimal_0, not_pareto_optimal_0, unclassified_0 = pareto_optimal_t, not_pareto_optimal_t, unclassified_t\n",
     "        \n",
+    "        # probably we should log something here like the hypervolume, the iteration number, the timing for the different steps \n",
     "        \n",
     "    return pareto_optimal_t"
    ]
