chore: added note about usage/eval func

--- a/notebooks/play_w_pal.ipynb
+++ b/notebooks/play_w_pal.ipynb
@@ -259,6 +259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Here, I assume that we exhaustively sampled, so we can provide y directly as input. Otherwise, there will be a sampling function that can return y\n",
     "def pal(gps: list, x_train: np.array, y_train: np.array, x_input: np.array, y_input: np.array, delta: float = 0.05, epsilon: float = 0.001, iterations: int = 100):\n",
     "    # x_input is the E set in the PAL paper \n",
     "   \n",
