fix bug in variable definition

--- a/notebooks/gp.ipynb
+++ b/notebooks/gp.ipynb
@@ -150,8 +150,8 @@
     "# split responses so when scaling so that we can perform inverse transform on each one individually\n",
     "\n",
     "feat_scaler = StandardScaler()\n",
-    "X = feat_scaler.fit_transform(X_train)\n",
-    "X = feat_scaler.transform(X_test)\n",
+    "X_train = feat_scaler.fit_transform(X_train)\n",
+    "X_test = feat_scaler.transform(X_test)\n",
     "\n",
     "\n",
     "label1_scaler = StandardScaler()\n",
