feat: featurization class

--- a/notebooks/develop_featurizer.ipynb
+++ b/notebooks/develop_featurizer.ipynb
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
     "    ideal_entropy = entropy_max(length)\n",
     "    entropy = - sum([ p * math.log(p) / math.log(2.0) for p in probs ])\n",
     "\n",
-    "    return entropy, ideal_entropy"
+    "    return entropy/ideal_entropy"
    ]
   },
   {
@@ -607,6 +607,173 @@
    ],
    "source": [
     "get_head_tail_features('[W][W][W][W][Ta][Ta][Ta][Ta][W][W][W]')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class PolymerSmilesFeaturizer:\n",
+    "    def __init__(self, smiles: str, normalized_cluster_stats: bool = True): \n",
+    "        self.smiles = smiles\n",
+    "        self.characters = ['[W]', '[Tr]', '[Ta]', '[R]']\n",
+    "        self.replacement_dict = dict(zip(self.characters, ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j']))\n",
+    "        self.normalized_cluster_stats = normalized_cluster_stats\n",
+    "        \n",
+    "    @staticmethod\n",
+    "    def get_head_tail_features(string: str, characters: list): \n",
+    "        \"\"\"0/1/2 encoded feature indicating if the building block is at start/end of the polymer chain\"\"\"\n",
+    "        is_head_tail = [0] * len(characters)\n",
+    "\n",
+    "        for i, char in enumerate(characters): \n",
+    "            if string.startswith(char):\n",
+    "                is_head_tail[i] += 1\n",
+    "            if string.endswith(char):\n",
+    "                is_head_tail[i] += 1\n",
+    "\n",
+    "        new_keys = ['head_tail_' + char for char in characters ]\n",
+    "        return dict(zip(new_keys, is_head_tail))\n",
+    "    \n",
+    "    \n",
+    "    @staticmethod \n",
+    "    def get_cluster_stats(s: str, replacement_dict: dict, normalized: bool = True):\n",
+    "        clusters = PolymerSmilesFeaturizer.find_clusters(s, replacement_dict)\n",
+    "        cluster_stats = {}\n",
+    "        cluster_stats['total_clusters'] = 0 \n",
+    "        for key, value in clusters.items(): \n",
+    "            if value:\n",
+    "                cluster_stats['num' + '_' + key] = len(value)\n",
+    "                cluster_stats['total_clusters'] += len(value)\n",
+    "                cluster_stats['max' + '_' + key] = max(value)\n",
+    "                cluster_stats['min' + '_' + key] = min(value)\n",
+    "            else:\n",
+    "                cluster_stats['num' + '_' +  key] = 0\n",
+    "                cluster_stats['max' + '_' + key] = 0\n",
+    "                cluster_stats['min' + '_' + key] = 0\n",
+    "\n",
+    "        if normalized: \n",
+    "            for key, value in cluster_stats.items(): \n",
+    "                if key != 'total_clusters': \n",
+    "                    cluster_stats[key] = value/cluster_stats['total_clusters']\n",
+    "\n",
+    "        return cluster_stats\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def find_clusters(s: str, replacement_dict: dict): \n",
+    "        clusters = re.findall(r'((\\w)\\2{1,})', PolymerSmilesFeaturizer._multiple_replace(s, replacement_dict))\n",
+    "        cluster_dict = dict(zip(replacement_dict.keys(), [[] for i in replacement_dict.keys()]))\n",
+    "        inv_replacement_dict = {v: k for k, v in replacement_dict.items()}\n",
+    "        for cluster, character in clusters: \n",
+    "            cluster_dict[inv_replacement_dict[character]].append(len(cluster))\n",
+    "\n",
+    "        return cluster_dict\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def _multiple_replace(s: str, replacement_dict: dict):\n",
+    "        for word in replacement_dict:\n",
+    "            s = s.replace(word, replacement_dict[word])\n",
+    "        return s\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def get_counts(smiles: str, characters: list):\n",
+    "        counts = [smiles.count(char) for char in characters]\n",
+    "        return dict(zip(characters, counts))\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def get_relative_shannon(character_count: dict): \n",
+    "        counts = [c for c in character_count.values() if c>0]\n",
+    "        length = sum(counts)\n",
+    "        probs = [count/length for count in counts]\n",
+    "        ideal_entropy = PolymerSmilesFeaturizer._entropy_max(length)\n",
+    "        entropy = - sum([ p * math.log(p) / math.log(2.0) for p in probs ])\n",
+    "\n",
+    "        return entropy/ideal_entropy\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def _entropy_max(length: int):\n",
+    "        \"Calculates the max Shannon entropy of a string with given length\"\n",
+    "\n",
+    "        prob = 1.0 / length\n",
+    "\n",
+    "        return -1.0 * length * prob * math.log(prob) / math.log(2.0)\n",
+    "        \n",
+    "    @staticmethod\n",
+    "    def get_balance(character_count: dict): \n",
+    "        counts = [c for c in character_count.values()]\n",
+    "        length = sum(counts)\n",
+    "        frequencies = [c/length for c in counts]\n",
+    "        return dict(zip(character_count.keys(), frequencies))\n",
+    "    \n",
+    "    def _featurize(self): \n",
+    "        self._character_count = PolymerSmilesFeaturizer.get_counts(self.smiles, self.characters)\n",
+    "        self._balance = PolymerSmilesFeaturizer.get_balance(self._character_count)\n",
+    "        self._relative_shannon = PolymerSmilesFeaturizer.get_relative_shannon(self._character_count)\n",
+    "        self._cluster_stats = PolymerSmilesFeaturizer.get_cluster_stats(self.smiles, self.replacement_dict, self.normalized_cluster_stats)\n",
+    "        self._head_tail_feat = PolymerSmilesFeaturizer.get_head_tail_features(self.smiles, self.characters)\n",
+    "        \n",
+    "        \n",
+    "        self.features = self._head_tail_feat\n",
+    "        self.features.update(self._cluster_stats)\n",
+    "        self.features.update(self._balance)\n",
+    "        self.features['rel_shannon'] = self._relative_shannon\n",
+    "        self.features['length'] = sum(self._character_count.values())\n",
+    "        \n",
+    "    def featurize(self): \n",
+    "        self._featurize()\n",
+    "        return self.features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "psf = PolymerSmilesFeaturizer('[W][W][W][W][Ta][Ta][Ta][Ta][W][W][W]')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'head_tail_[W]': 2,\n",
+       " 'head_tail_[Tr]': 0,\n",
+       " 'head_tail_[Ta]': 0,\n",
+       " 'head_tail_[R]': 0,\n",
+       " 'total_clusters': 3,\n",
+       " 'num_[W]': 0.6666666666666666,\n",
+       " 'max_[W]': 1.3333333333333333,\n",
+       " 'min_[W]': 1.0,\n",
+       " 'num_[Tr]': 0.0,\n",
+       " 'max_[Tr]': 0.0,\n",
+       " 'min_[Tr]': 0.0,\n",
+       " 'num_[Ta]': 0.3333333333333333,\n",
+       " 'max_[Ta]': 1.3333333333333333,\n",
+       " 'min_[Ta]': 1.3333333333333333,\n",
+       " 'num_[R]': 0.0,\n",
+       " 'max_[R]': 0.0,\n",
+       " 'min_[R]': 0.0,\n",
+       " '[W]': 0.6363636363636364,\n",
+       " '[Tr]': 0.0,\n",
+       " '[Ta]': 0.36363636363636365,\n",
+       " '[R]': 0.0,\n",
+       " 'rel_shannon': 0.27335713170510495,\n",
+       " 'length': 11}"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "psf.featurize()"
    ]
   },
   {
