--- a/notebooks/create_new_features.ipynb
+++ b/notebooks/create_new_features.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,11 +43,440 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "full_random_feat = featurize_many(smiless_full_random)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>head_tail_[W]</th>\n",
+       "      <th>head_tail_[Tr]</th>\n",
+       "      <th>head_tail_[Ta]</th>\n",
+       "      <th>head_tail_[R]</th>\n",
+       "      <th>total_clusters</th>\n",
+       "      <th>num_[W]</th>\n",
+       "      <th>max_[W]</th>\n",
+       "      <th>min_[W]</th>\n",
+       "      <th>mean_[W]</th>\n",
+       "      <th>num_[Tr]</th>\n",
+       "      <th>...</th>\n",
+       "      <th>min_[R]</th>\n",
+       "      <th>mean_[R]</th>\n",
+       "      <th>[W]</th>\n",
+       "      <th>[Tr]</th>\n",
+       "      <th>[Ta]</th>\n",
+       "      <th>[R]</th>\n",
+       "      <th>rel_shannon</th>\n",
+       "      <th>length</th>\n",
+       "      <th>total_solvent</th>\n",
+       "      <th>total_surface</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.250000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>0.250000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>16</td>\n",
+       "      <td>480</td>\n",
+       "      <td>400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.400000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>0.200000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>16</td>\n",
+       "      <td>480</td>\n",
+       "      <td>400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>16</td>\n",
+       "      <td>480</td>\n",
+       "      <td>400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>16</td>\n",
+       "      <td>480</td>\n",
+       "      <td>400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>16</td>\n",
+       "      <td>480</td>\n",
+       "      <td>400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3120</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0.181818</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.50</td>\n",
+       "      <td>0.181818</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.358104</td>\n",
+       "      <td>48</td>\n",
+       "      <td>1440</td>\n",
+       "      <td>1200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3121</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0.285714</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>0.142857</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.358104</td>\n",
+       "      <td>48</td>\n",
+       "      <td>1440</td>\n",
+       "      <td>1200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3122</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0.222222</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>0.222222</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.358104</td>\n",
+       "      <td>48</td>\n",
+       "      <td>1440</td>\n",
+       "      <td>1200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3123</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0.111111</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.358104</td>\n",
+       "      <td>48</td>\n",
+       "      <td>1440</td>\n",
+       "      <td>1200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3124</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.400000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.25</td>\n",
+       "      <td>0.300000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.358104</td>\n",
+       "      <td>48</td>\n",
+       "      <td>1440</td>\n",
+       "      <td>1200</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3125 rows × 29 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      head_tail_[W]  head_tail_[Tr]  head_tail_[Ta]  head_tail_[R]  \\\n",
+       "0                 1               0               0              1   \n",
+       "1                 0               1               0              1   \n",
+       "2                 0               0               1              1   \n",
+       "3                 1               0               0              1   \n",
+       "4                 0               1               0              1   \n",
+       "...             ...             ...             ...            ...   \n",
+       "3120              1               0               0              1   \n",
+       "3121              0               0               0              2   \n",
+       "3122              1               0               1              0   \n",
+       "3123              0               1               1              0   \n",
+       "3124              0               1               0              1   \n",
+       "\n",
+       "      total_clusters   num_[W]  max_[W]  min_[W]  mean_[W]  num_[Tr]  ...  \\\n",
+       "0                  4  0.250000        2        2      2.00  0.250000  ...   \n",
+       "1                  5  0.400000        2        2      2.00  0.200000  ...   \n",
+       "2                  1  0.000000        0        0      0.00  1.000000  ...   \n",
+       "3                  2  0.000000        0        0      0.00  0.500000  ...   \n",
+       "4                  3  0.000000        0        0      0.00  0.333333  ...   \n",
+       "...              ...       ...      ...      ...       ...       ...  ...   \n",
+       "3120              11  0.181818        3        2      2.50  0.181818  ...   \n",
+       "3121               7  0.285714        3        3      3.00  0.142857  ...   \n",
+       "3122               9  0.222222        2        2      2.00  0.222222  ...   \n",
+       "3123               9  0.111111        2        2      2.00  0.333333  ...   \n",
+       "3124              10  0.400000        3        2      2.25  0.300000  ...   \n",
+       "\n",
+       "      min_[R]  mean_[R]   [W]  [Tr]  [Ta]   [R]  rel_shannon  length  \\\n",
+       "0           2       2.0  0.25  0.25  0.25  0.25     0.500000      16   \n",
+       "1           2       2.0  0.25  0.25  0.25  0.25     0.500000      16   \n",
+       "2           0       0.0  0.25  0.25  0.25  0.25     0.500000      16   \n",
+       "3           2       2.0  0.25  0.25  0.25  0.25     0.500000      16   \n",
+       "4           2       2.0  0.25  0.25  0.25  0.25     0.500000      16   \n",
+       "...       ...       ...   ...   ...   ...   ...          ...     ...   \n",
+       "3120        2       2.0  0.25  0.25  0.25  0.25     0.358104      48   \n",
+       "3121        2       2.0  0.25  0.25  0.25  0.25     0.358104      48   \n",
+       "3122        2       2.0  0.25  0.25  0.25  0.25     0.358104      48   \n",
+       "3123        2       2.0  0.25  0.25  0.25  0.25     0.358104      48   \n",
+       "3124        3       3.0  0.25  0.25  0.25  0.25     0.358104      48   \n",
+       "\n",
+       "      total_solvent  total_surface  \n",
+       "0               480            400  \n",
+       "1               480            400  \n",
+       "2               480            400  \n",
+       "3               480            400  \n",
+       "4               480            400  \n",
+       "...             ...            ...  \n",
+       "3120           1440           1200  \n",
+       "3121           1440           1200  \n",
+       "3122           1440           1200  \n",
+       "3123           1440           1200  \n",
+       "3124           1440           1200  \n",
+       "\n",
+       "[3125 rows x 29 columns]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_random_feat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_random_feat.to_csv('../data/new_features_full_random.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_frac_random = pd.read_csv('../data/X_frac_random.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "smiless_frac_random = df_frac_random['smiles']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frac_random_feat = featurize_many(smiless_frac_random)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frac_random_feat.to_csv('../data/new_features_frac_random.csv', index=False)"
    ]
   },
   {
