--- a/notebooks/create_new_features.ipynb
+++ b/notebooks/create_new_features.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -87,8 +87,6 @@
        "      <th>mean_[W]</th>\n",
        "      <th>num_[Tr]</th>\n",
        "      <th>...</th>\n",
-       "      <th>min_[R]</th>\n",
-       "      <th>mean_[R]</th>\n",
        "      <th>[W]</th>\n",
        "      <th>[Tr]</th>\n",
        "      <th>[Ta]</th>\n",
@@ -96,7 +94,9 @@
        "      <th>rel_shannon</th>\n",
        "      <th>length</th>\n",
        "      <th>total_solvent</th>\n",
+       "      <th>std_solvent</th>\n",
        "      <th>total_surface</th>\n",
+       "      <th>std_surface</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -113,8 +113,6 @@
        "      <td>2.00</td>\n",
        "      <td>0.250000</td>\n",
        "      <td>...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2.0</td>\n",
        "      <td>0.25</td>\n",
        "      <td>0.25</td>\n",
        "      <td>0.25</td>\n",
@@ -122,7 +120,9 @@
        "      <td>0.500000</td>\n",
        "      <td>16</td>\n",
        "      <td>480</td>\n",
+       "      <td>3.535534</td>\n",
        "      <td>400</td>\n",
+       "      <td>5.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -137,8 +137,6 @@
        "      <td>2.00</td>\n",
        "      <td>0.200000</td>\n",
        "      <td>...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2.0</td>\n",
        "      <td>0.25</td>\n",
        "      <td>0.25</td>\n",
        "      <td>0.25</td>\n",
@@ -146,7 +144,9 @@
        "      <td>0.500000</td>\n",
        "      <td>16</td>\n",
        "      <td>480</td>\n",
+       "      <td>3.535534</td>\n",
        "      <td>400</td>\n",
+       "      <td>5.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -161,8 +161,6 @@
        "      <td>0.00</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.25</td>\n",
        "      <td>0.25</td>\n",
        "      <td>0.25</td>\n",
@@ -170,7 +168,9 @@
        "      <td>0.500000</td>\n",
        "      <td>16</td>\n",
        "      <td>480</td>\n",
+       "      <td>3.535534</td>\n",
        "      <td>400</td>\n",
+       "      <td>5.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -185,8 +185,6 @@
        "      <td>0.00</td>\n",
        "      <td>0.500000</td>\n",
        "      <td>...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2.0</td>\n",
        "      <td>0.25</td>\n",
        "      <td>0.25</td>\n",
        "      <td>0.25</td>\n",
@@ -194,7 +192,9 @@
        "      <td>0.500000</td>\n",
        "      <td>16</td>\n",
        "      <td>480</td>\n",
+       "      <td>3.535534</td>\n",
        "      <td>400</td>\n",
+       "      <td>5.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -209,8 +209,6 @@
        "      <td>0.00</td>\n",
        "      <td>0.333333</td>\n",
        "      <td>...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2.0</td>\n",
        "      <td>0.25</td>\n",
        "      <td>0.25</td>\n",
        "      <td>0.25</td>\n",
@@ -218,7 +216,9 @@
        "      <td>0.500000</td>\n",
        "      <td>16</td>\n",
        "      <td>480</td>\n",
+       "      <td>3.535534</td>\n",
        "      <td>400</td>\n",
+       "      <td>5.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -257,8 +257,6 @@
        "      <td>2.50</td>\n",
        "      <td>0.181818</td>\n",
        "      <td>...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2.0</td>\n",
        "      <td>0.25</td>\n",
        "      <td>0.25</td>\n",
        "      <td>0.25</td>\n",
@@ -266,7 +264,9 @@
        "      <td>0.358104</td>\n",
        "      <td>48</td>\n",
        "      <td>1440</td>\n",
+       "      <td>3.535534</td>\n",
        "      <td>1200</td>\n",
+       "      <td>5.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3121</th>\n",
@@ -281,8 +281,6 @@
        "      <td>3.00</td>\n",
        "      <td>0.142857</td>\n",
        "      <td>...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2.0</td>\n",
        "      <td>0.25</td>\n",
        "      <td>0.25</td>\n",
        "      <td>0.25</td>\n",
@@ -290,7 +288,9 @@
        "      <td>0.358104</td>\n",
        "      <td>48</td>\n",
        "      <td>1440</td>\n",
+       "      <td>3.535534</td>\n",
        "      <td>1200</td>\n",
+       "      <td>5.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3122</th>\n",
@@ -305,8 +305,6 @@
        "      <td>2.00</td>\n",
        "      <td>0.222222</td>\n",
        "      <td>...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2.0</td>\n",
        "      <td>0.25</td>\n",
        "      <td>0.25</td>\n",
        "      <td>0.25</td>\n",
@@ -314,7 +312,9 @@
        "      <td>0.358104</td>\n",
        "      <td>48</td>\n",
        "      <td>1440</td>\n",
+       "      <td>3.535534</td>\n",
        "      <td>1200</td>\n",
+       "      <td>5.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3123</th>\n",
@@ -329,8 +329,6 @@
        "      <td>2.00</td>\n",
        "      <td>0.333333</td>\n",
        "      <td>...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2.0</td>\n",
        "      <td>0.25</td>\n",
        "      <td>0.25</td>\n",
        "      <td>0.25</td>\n",
@@ -338,7 +336,9 @@
        "      <td>0.358104</td>\n",
        "      <td>48</td>\n",
        "      <td>1440</td>\n",
+       "      <td>3.535534</td>\n",
        "      <td>1200</td>\n",
+       "      <td>5.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3124</th>\n",
@@ -353,8 +353,6 @@
        "      <td>2.25</td>\n",
        "      <td>0.300000</td>\n",
        "      <td>...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3.0</td>\n",
        "      <td>0.25</td>\n",
        "      <td>0.25</td>\n",
        "      <td>0.25</td>\n",
@@ -362,11 +360,13 @@
        "      <td>0.358104</td>\n",
        "      <td>48</td>\n",
        "      <td>1440</td>\n",
+       "      <td>3.535534</td>\n",
        "      <td>1200</td>\n",
+       "      <td>5.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3125 rows × 29 columns</p>\n",
+       "<p>3125 rows × 31 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -396,36 +396,36 @@
        "3123               9  0.111111        2        2      2.00  0.333333  ...   \n",
        "3124              10  0.400000        3        2      2.25  0.300000  ...   \n",
        "\n",
-       "      min_[R]  mean_[R]   [W]  [Tr]  [Ta]   [R]  rel_shannon  length  \\\n",
-       "0           2       2.0  0.25  0.25  0.25  0.25     0.500000      16   \n",
-       "1           2       2.0  0.25  0.25  0.25  0.25     0.500000      16   \n",
-       "2           0       0.0  0.25  0.25  0.25  0.25     0.500000      16   \n",
-       "3           2       2.0  0.25  0.25  0.25  0.25     0.500000      16   \n",
-       "4           2       2.0  0.25  0.25  0.25  0.25     0.500000      16   \n",
-       "...       ...       ...   ...   ...   ...   ...          ...     ...   \n",
-       "3120        2       2.0  0.25  0.25  0.25  0.25     0.358104      48   \n",
-       "3121        2       2.0  0.25  0.25  0.25  0.25     0.358104      48   \n",
-       "3122        2       2.0  0.25  0.25  0.25  0.25     0.358104      48   \n",
-       "3123        2       2.0  0.25  0.25  0.25  0.25     0.358104      48   \n",
-       "3124        3       3.0  0.25  0.25  0.25  0.25     0.358104      48   \n",
+       "       [W]  [Tr]  [Ta]   [R]  rel_shannon  length  total_solvent  std_solvent  \\\n",
+       "0     0.25  0.25  0.25  0.25     0.500000      16            480     3.535534   \n",
+       "1     0.25  0.25  0.25  0.25     0.500000      16            480     3.535534   \n",
+       "2     0.25  0.25  0.25  0.25     0.500000      16            480     3.535534   \n",
+       "3     0.25  0.25  0.25  0.25     0.500000      16            480     3.535534   \n",
+       "4     0.25  0.25  0.25  0.25     0.500000      16            480     3.535534   \n",
+       "...    ...   ...   ...   ...          ...     ...            ...          ...   \n",
+       "3120  0.25  0.25  0.25  0.25     0.358104      48           1440     3.535534   \n",
+       "3121  0.25  0.25  0.25  0.25     0.358104      48           1440     3.535534   \n",
+       "3122  0.25  0.25  0.25  0.25     0.358104      48           1440     3.535534   \n",
+       "3123  0.25  0.25  0.25  0.25     0.358104      48           1440     3.535534   \n",
+       "3124  0.25  0.25  0.25  0.25     0.358104      48           1440     3.535534   \n",
        "\n",
-       "      total_solvent  total_surface  \n",
-       "0               480            400  \n",
-       "1               480            400  \n",
-       "2               480            400  \n",
-       "3               480            400  \n",
-       "4               480            400  \n",
-       "...             ...            ...  \n",
-       "3120           1440           1200  \n",
-       "3121           1440           1200  \n",
-       "3122           1440           1200  \n",
-       "3123           1440           1200  \n",
-       "3124           1440           1200  \n",
+       "      total_surface  std_surface  \n",
+       "0               400          5.0  \n",
+       "1               400          5.0  \n",
+       "2               400          5.0  \n",
+       "3               400          5.0  \n",
+       "4               400          5.0  \n",
+       "...             ...          ...  \n",
+       "3120           1200          5.0  \n",
+       "3121           1200          5.0  \n",
+       "3122           1200          5.0  \n",
+       "3123           1200          5.0  \n",
+       "3124           1200          5.0  \n",
        "\n",
-       "[3125 rows x 29 columns]"
+       "[3125 rows x 31 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
