chore: optimizing for 3D: - First runs with 3 objectives - Defaulting to GPy as it is faster than sklearn, but ARD makes it prone to overfitting (in general the models seem to be a bit more easy to overfit) - Also dropping the python 2 modernizer from pre-commit hook
Former-commit-id: eddaafd543297676ab6ae5b2109ad9a5f7163bdc [formerly 59c7694c5eb5361b2c1856e5419e4f7012f3c551]
Former-commit-id: 6b7bd8dbe9b62317fecc9f9f2cb63f3da0a03efc

--- a/notebooks/feature_importance.ipynb
+++ b/notebooks/feature_importance.ipynb
@@ -53,11 +53,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "feat_names = list(pd.read_csv(os.path.join(DATADIR, 'new_features_full_random.csv')).columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "['head_tail_[W]', 'head_tail_[Tr]', 'head_tail_[Ta]', 'head_tail_[R]', 'total_clusters', 'num_[W]', 'max_[W]', 'min_[W]', 'mean_[W]', 'num_[Tr]', 'max_[Tr]', 'min_[Tr]', 'mean_[Tr]', 'num_[Ta]', 'max_[Ta]', 'min_[Ta]', 'mean_[Ta]', 'num_[R]', 'max_[R]', 'min_[R]', 'mean_[R]', '[W]', '[Tr]', '[Ta]', '[R]', 'rel_shannon', 'length', 'total_solvent', 'std_solvent', 'total_surface', 'std_surface']"
+      ],
+      "text/plain": [
+       "['head_tail_[W]',\n",
+       " 'head_tail_[Tr]',\n",
+       " 'head_tail_[Ta]',\n",
+       " 'head_tail_[R]',\n",
+       " 'total_clusters',\n",
+       " 'num_[W]',\n",
+       " 'max_[W]',\n",
+       " 'min_[W]',\n",
+       " 'mean_[W]',\n",
+       " 'num_[Tr]',\n",
+       " 'max_[Tr]',\n",
+       " 'min_[Tr]',\n",
+       " 'mean_[Tr]',\n",
+       " 'num_[Ta]',\n",
+       " 'max_[Ta]',\n",
+       " 'min_[Ta]',\n",
+       " 'mean_[Ta]',\n",
+       " 'num_[R]',\n",
+       " 'max_[R]',\n",
+       " 'min_[R]',\n",
+       " 'mean_[R]',\n",
+       " '[W]',\n",
+       " '[Tr]',\n",
+       " '[Ta]',\n",
+       " '[R]',\n",
+       " 'rel_shannon',\n",
+       " 'length',\n",
+       " 'total_solvent',\n",
+       " 'std_solvent',\n",
+       " 'total_surface',\n",
+       " 'std_surface']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feat_names"
    ]
   },
   {
