feat: ga on gbdt cli
Former-commit-id: 1f802bc1e30a180c055c74a82db9f9f5c573ea48 [formerly 415cd200baa7a8dcd56a87298d166f8b4b5a996e]
Former-commit-id: fc1bcff197723ecc26996718e7bd3b9fbd42de10

--- a/notebooks/feature_importance.ipynb
+++ b/notebooks/feature_importance.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
     "rg = pd.read_csv(os.path.join(DATADIR, 'rg_results.csv'))['Rg'].values\n",
     "y = np.hstack([\n",
     "    rg.reshape(-1, 1),\n",
-    "    gibbs.reshape(-1, 1),\n",
+    "    -gibbs.reshape(-1, 1),\n",
     "    gibbs_max.reshape(-1, 1),\n",
     "    force_max.reshape(-1, 1),\n",
     "    deltaGMax.reshape(-1, 1),\n",
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
        "2.0282957083665787"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
        "              subsample_freq=0)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
        "['../models/gbdt/target_1.joblib']"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
