chore: moving to cluster
Former-commit-id: 9a03f6aad2f07c09c27f5ff5236366567c87d382
Former-commit-id: ce9db69e569859da7c6798903e9c8cf40c143bc2

--- a/notebooks/application_to_mof.ipynb
+++ b/notebooks/application_to_mof.ipynb
@@ -489,24 +489,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 565,
+   "execution_count": 574,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████▉| 199/200 [00:19<00:00,  9.96it/s]\n"
+      "100%|█████████▉| 299/300 [00:43<00:00,  6.95it/s]\n"
      ]
     }
    ],
    "source": [
-    "X_train, y_train, indices = get_maxmin_samples(X, y, 200)"
+    "X_train, y_train, indices = get_maxmin_samples(X, y, 300)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 566,
+   "execution_count": 575,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 567,
+   "execution_count": 576,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
        "\n",
        "<p class=pd>\n",
        "<b>Model</b>: gp<br>\n",
-       "<b>Objective</b>: 423.20689652391616<br>\n",
+       "<b>Objective</b>: 567.7784856530185<br>\n",
        "<b>Number of Parameters</b>: 32<br>\n",
        "<b>Number of Optimization Parameters</b>: 31<br>\n",
        "<b>Updates</b>: True<br>\n",
@@ -555,10 +555,10 @@
        "</table>"
       ],
       "text/plain": [
-       "<GPy.models.gp_coregionalized_regression.GPCoregionalizedRegression at 0x7fd7cd7bac18>"
+       "<GPy.models.gp_coregionalized_regression.GPCoregionalizedRegression at 0x7fd7cef4e2b0>"
       ]
      },
-     "execution_count": 567,
+     "execution_count": 576,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 568,
+   "execution_count": 577,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,12 +582,17 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " /Users/kevinmaikjablonka/Dropbox (LSMO)/Documents/open_source/GPy/GPy/kern/src/stationary.py:243: RuntimeWarning:invalid value encountered in true_divide\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Optimization restart 1/10, f = -446.7010430704522\n",
-      "Optimization restart 2/10, f = -349.2096374233273\n",
-      "Optimization restart 3/10, f = -350.3494358214666\n"
+      "Optimization restart 1/10, f = -667.5128301984876\n"
      ]
     }
    ],
