chore: moving to cluster
Former-commit-id: 759a300aad14329603f59707297fda94aff4f7cd

--- a/notebooks/application_to_mof.ipynb
+++ b/notebooks/application_to_mof.ipynb
@@ -592,7 +592,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Optimization restart 1/10, f = -667.5128301984876\n"
+      "Optimization restart 1/10, f = -667.5128301984876\n",
+      "Optimization restart 2/10, f = -540.9228571099668\n",
+      "Optimization restart 3/10, f = -698.8131495633947\n",
+      "Optimization restart 4/10, f = -548.8754327918035\n",
+      "Optimization restart 5/10, f = -541.9383163374089\n",
+      "Optimization restart 6/10, f = -546.8314145504842\n",
+      "Optimization restart 7/10, f = -477.33387840363616\n",
+      "Optimization restart 8/10, f = -458.05925515176193\n"
      ]
     }
    ],
