--- a/notebooks/application_to_mof.ipynb
+++ b/notebooks/application_to_mof.ipynb
@@ -63,7 +63,11 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "other_descriptors = ['CellV [A^3]']\n",
