--- a/notebooks/random_baseline-mof.ipynb
+++ b/notebooks/random_baseline-mof.ipynb
@@ -1881,7 +1881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1890,6 +1890,15 @@
     "for i in range(100):\n",
     "    hv_random = get_random_exploration_bl(y, reference_vector=[5,5])\n",
     "    random_explorations.append(hv_random)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save('random_exploration_mof_case_study', random_explorations)"
    ]
   },
   {
